# claude-code-rust

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli_args.rs  commands.rs  helpers.rs  main.rs  reports.rs  session.rs  spinner_verbs.rs  startup.rs  tests.rs
crates/cli/src/commands/: clipboard.rs  noninteractive.rs  renderers.rs  repl_loop.rs  repl_submit.rs
crates/cli/src/main/: bridge.rs  pending_runtime.rs  pending_state.rs  prompt_commands.rs  repl_picker.rs  repl_ui.rs  runtime.rs  session_messages.rs  system_prompt.rs  transcript_actions.rs  ui_helpers.rs
crates/cli/src/tests/: commands.rs  remote.rs  session_ui.rs  ui_basics.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  tests.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  tests.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: auth.rs  http.rs  lib.rs  tests.rs
crates/providers/src/providers/: api.rs  auth_status.rs  models.rs  openai_events.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs  tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  tests.rs
crates/tools/src/tools/: fs_shell.rs  helpers.rs  mcp.rs  registry.rs  search.rs  tasks.rs  web.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  tests.rs  vim.rs
crates/ui/src/ui/: chrome.rs  render.rs  tasks.rs  transcript.rs  types.rs
docs/: compatibility-matrix.md  transcript-format.md
fixtures/: README.txt
fixtures/command-golden/: slash-commands.json
fixtures/plugin-fixtures/review-tools/.claude-plugin/: plugin.json
fixtures/plugin-fixtures/review-tools/.claude/commands/: triage.md
fixtures/plugin-fixtures/review-tools/.claude/skills/audit/: SKILL.md
fixtures/plugin-fixtures/review-tools/agents/: release.md
fixtures/plugin-fixtures/review-tools/commands/: about.md
fixtures/plugin-fixtures/review-tools/hooks/: hooks.json
fixtures/plugin-fixtures/review-tools/skills/review/: SKILL.md
fixtures/provider-streams/: anthropic_tool_use.json  openai_tool_call.json
fixtures/transcripts/: 77777777-7777-4777-8777-777777777777.jsonl
