[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/providers",
  "crates/tools",
  "crates/mcp",
  "crates/session",
  "crates/ui",
  "crates/plugins",
  "crates/bridge",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
futures-util = "0.3"
hmac = "0.12"
hex = "0.4"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
ratatui = "0.29"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "=1.8.0", features = ["serde", "v4"] }
