[package]
name = "code-agent-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
code-agent-bridge = { path = "../bridge" }
code-agent-core = { path = "../core" }
code-agent-mcp = { path = "../mcp" }
code-agent-plugins = { path = "../plugins" }
code-agent-providers = { path = "../providers" }
code-agent-session = { path = "../session" }
code-agent-tools = { path = "../tools" }
code-agent-ui = { path = "../ui" }
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
