[package]
name = "code-agent-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
code-agent-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
