[package]
name = "code-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
code-agent-core = { path = "../core" }
code-agent-mcp = { path = "../mcp" }
code-agent-plugins = { path = "../plugins" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
